初始化项目

--- a/spring/pom.xml
+++ b/spring/pom.xml
@@ -16,6 +16,7 @@
     <modules>
         <module>springUtils</module>
         <module>springWebUtils</module>
+        <module>springEmail</module>
     </modules>
 
 
