--- a/template/freemarkerUtils/pom.xml
+++ b/template/freemarkerUtils/pom.xml
@@ -7,14 +7,13 @@
         <groupId>com.zz.bms.util</groupId>
         <version>1.0.1</version>
     </parent>
+
     <modelVersion>4.0.0</modelVersion>
-
     <groupId>com.zz.bms.util</groupId>
-    <artifactId>freemarker</artifactId>
+    <artifactId>freemarkerUtils</artifactId>
+    <packaging>jar</packaging>
     <version>1.0.1</version>
-
-    <name>freemarker</name>
-    <!-- FIXME change it to the project's website -->
+    <name>freemarkerUtils</name>
     <url>http://www.example.com</url>
 
     <properties>
@@ -24,6 +23,8 @@
     </properties>
 
     <dependencies>
+
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
@@ -45,6 +46,7 @@
             <artifactId>freemarker</artifactId>
             <version>2.3.20</version>
         </dependency>
+
     </dependencies>
 
 </project>
