--- a/baseUtil/pom.xml
+++ b/baseUtil/pom.xml
@@ -53,6 +53,9 @@
         <commons-compress>1.8.1</commons-compress>
         <!-- apache commons -->
 
+
+        <pinyin4j.version>2.5.0</pinyin4j.version>
+
     </properties>
 
     <dependencies>
@@ -225,6 +228,15 @@
             <artifactId>guava</artifactId>
             <version>19.0</version>
         </dependency>
+
+
+
+        <dependency>
+            <groupId>pinyin4j</groupId>
+            <artifactId>pinyin4j</artifactId>
+            <version>${pinyin4j.version}</version>
+        </dependency>
+
 
     </dependencies>
 
