初始化项目

--- a/poiUtil/springPoi/pom.xml
+++ b/poiUtil/springPoi/pom.xml
@@ -3,18 +3,18 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>spring</artifactId>
+        <artifactId>poiUtil</artifactId>
         <groupId>com.zz.bms.util</groupId>
         <version>1.0.1</version>
     </parent>
-    <modelVersion>4.0.0</modelVersion>
 
+    <modelVersion>4.0.0</modelVersion>
     <groupId>com.zz.bms.util</groupId>
-    <artifactId>springWebUtils</artifactId>
+    <artifactId>springPoi</artifactId>
+    <packaging>jar</packaging>
     <version>1.0.1</version>
 
-    <name>springWebUtils</name>
-    <packaging>jar</packaging>
+    <name>springPoi</name>
     <url>http://www.example.com</url>
 
     <properties>
@@ -33,25 +33,17 @@
 
         <dependency>
             <groupId>com.zz.bms.util</groupId>
-            <artifactId>webUtil</artifactId>
+            <artifactId>basePoi</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zz.bms.util</groupId>
+            <artifactId>springUtils</artifactId>
             <version>1.0.1</version>
         </dependency>
 
 
-
-        <!-- JSTL标签类 -->
-        <dependency>
-            <groupId>jstl</groupId>
-            <artifactId>jstl</artifactId>
-            <version>${jstl.version}</version>
-        </dependency>
-
-        <!-- 导入java ee jar 包 -->
-        <!--<dependency>
-          <groupId>javax</groupId>
-          <artifactId>javaee-api</artifactId>
-          <version>${javaee.api.version}</version>
-        </dependency>-->
 
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -74,7 +66,6 @@
             <version>${servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
-
     </dependencies>
 
 </project>
