--- a/baseUtil/pom.xml
+++ b/baseUtil/pom.xml
@@ -33,6 +33,8 @@
         <jackson.mapper.version>1.9.13</jackson.mapper.version>
         <jackson.version>2.7.4</jackson.version>
         <fastjson.version>1.2.23</fastjson.version>
+        <gson.version>2.2.4</gson.version>
+        <guava.version>18.0</guava.version>
 
 
         <!-- apache commons -->
@@ -118,6 +120,18 @@
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>com.google.guava</groupId>
+            <artifactId>guava</artifactId>
+            <version>${guava.version}</version>
         </dependency>
 
         <!--commons-->
