--- a/base/pom.xml
+++ b/base/pom.xml
@@ -15,5 +15,9 @@
     <packaging>pom</packaging>
     <version>1.0.1</version>
 
+    <modules>
+        <module>baseUtil</module>
+    </modules>
+
 
 </project>
