--- a/expression/pom.xml
+++ b/expression/pom.xml
@@ -13,6 +13,10 @@
     <artifactId>expression</artifactId>
     <packaging>pom</packaging>
     <version>1.0.1</version>
+    <modules>
+        <module>expressionUtil</module>
+        <module>cronUtil</module>
+    </modules>
 
 
 </project>
