--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,51 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
+
         <!-- servlet jsp -->
         <jstl.version>1.2</jstl.version>
         <servlet.version>3.1.0</servlet.version>
         <servlet-api.version>2.4</servlet-api.version>
         <jsp.version>2.0</jsp.version>
         <!-- servlet jsp -->
+
+
+
+
+        <!-- logs -->
+        <slf4j.version>1.7.7</slf4j.version>
+        <log4j.version>1.2.17</log4j.version>
+        <!-- logs -->
+
+
+
+        <jackson.mapper.version>1.9.13</jackson.mapper.version>
+        <jackson.version>2.7.4</jackson.version>
+        <fastjson.version>1.2.23</fastjson.version>
+        <gson.version>2.2.4</gson.version>
+
+
+        <!-- apache commons -->
+        <commons-beanutils.version>1.7.0</commons-beanutils.version>
+        <commons-collections.version>3.2.1</commons-collections.version>
+        <commons-chain.version>1.2</commons-chain.version>
+        <commons-codec.version>1.10</commons-codec.version>
+        <commons-digester.version>2.0</commons-digester.version>
+        <commons-io.version>2.4</commons-io.version>
+        <commons-fileupload.version>1.2.2</commons-fileupload.version>
+        <commons-lang.version>2.6</commons-lang.version>
+        <commons-lang3.version>3.3.2</commons-lang3.version>
+        <commons-email.version>1.2</commons-email.version>
+        <commons-logging.version>1.1.3</commons-logging.version>
+        <commons-logging-api.version>1.1</commons-logging-api.version>
+        <commons-validator.version>1.3.1</commons-validator.version>
+        <commons-pool>1.6</commons-pool>
+        <commons-compress>1.8.1</commons-compress>
+        <!-- apache commons -->
+
+        <guava.version>20.0</guava.version>
+
+        <pinyin4j.version>2.5.0</pinyin4j.version>
     </properties>
 
 
