初始化项目

--- a/files/pom.xml
+++ b/files/pom.xml
@@ -13,6 +13,9 @@
     <artifactId>files</artifactId>
     <packaging>pom</packaging>
     <version>1.0.1</version>
+    <modules>
+        <module>baseFileUtils</module>
+    </modules>
 
 
 </project>
