初始化项目

--- a/http/pom.xml
+++ b/http/pom.xml
@@ -13,6 +13,10 @@
     <artifactId>http</artifactId>
     <packaging>pom</packaging>
     <version>1.0.1</version>
+    <modules>
+        <module>baseHttpUtil</module>
+        <module>httpPoolUtil</module>
+    </modules>
 
 
 </project>
