--- a/http/baseHttpUtil/pom.xml
+++ b/http/baseHttpUtil/pom.xml
@@ -3,17 +3,17 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>files</artifactId>
+        <artifactId>http</artifactId>
         <groupId>com.zz.bms.util</groupId>
         <version>1.0.1</version>
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.zz.bms.util</groupId>
-    <artifactId>baseFileUtils</artifactId>
+    <artifactId>baseHttpUtil</artifactId>
     <packaging>jar</packaging>
     <version>1.0.1</version>
-    <name>baseFileUtils</name>
+    <name>baseHttpUtil</name>
     <url>http://www.example.com</url>
 
 
@@ -21,13 +21,6 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-
-        <!-- servlet jsp -->
-        <jstl.version>1.2</jstl.version>
-        <servlet.version>3.1.0</servlet.version>
-        <servlet-api.version>2.4</servlet-api.version>
-        <jsp.version>2.0</jsp.version>
-        <!-- servlet jsp -->
     </properties>
 
     <dependencies>
@@ -44,27 +37,33 @@
             <version>1.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.zz.bms.util</groupId>
+            <artifactId>webUtil</artifactId>
+            <version>1.0.1</version>
+        </dependency>
 
 
 
         <dependency>
-            <groupId>javatar</groupId>
-            <artifactId>javatar</artifactId>
-            <version>2.5</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpcore</artifactId>
+            <version>4.4.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpmime</artifactId>
+            <version>4.5.6</version>
+        </dependency>
+
 
         <dependency>
-            <groupId>com.github.junrar</groupId>
-            <artifactId>junrar</artifactId>
-            <version>0.7</version>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.6</version>
         </dependency>
 
 
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>${guava.version}</version>
-        </dependency>
 
 
         <dependency>
@@ -88,26 +87,6 @@
             <version>${servlet-api.version}</version>
             <scope>provided</scope>
         </dependency>
-
-
-        <dependency>
-            <groupId>org.apache.ant</groupId>
-            <artifactId>ant</artifactId>
-            <version>1.9.6</version>
-        </dependency>
-
-        <dependency>
-            <groupId>commons-fileupload</groupId>
-            <artifactId>commons-fileupload</artifactId>
-            <version>${commons-fileupload.version}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>commons-io</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>${commons-io.version}</version>
-        </dependency>
-
 
     </dependencies>
 
