--- a/web/pom.xml
+++ b/web/pom.xml
@@ -2,7 +2,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-
     <parent>
         <artifactId>zzUtils</artifactId>
         <groupId>com.zz.bms.util</groupId>
@@ -14,6 +13,9 @@
     <artifactId>web</artifactId>
     <packaging>pom</packaging>
     <version>1.0.1</version>
+    <modules>
+        <module>webUtil</module>
+    </modules>
 
 
 </project>
