--- a/poi/springPoiUtil/pom.xml
+++ b/poi/springPoiUtil/pom.xml
@@ -33,13 +33,13 @@
 
         <dependency>
             <groupId>com.zz.bms.util</groupId>
-            <artifactId>basePoi</artifactId>
+            <artifactId>basePoiUtil</artifactId>
             <version>1.0.1</version>
         </dependency>
 
         <dependency>
             <groupId>com.zz.bms.util</groupId>
-            <artifactId>springUtils</artifactId>
+            <artifactId>springUtil</artifactId>
             <version>1.0.1</version>
         </dependency>
 
