初始化项目

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
         <module>template</module>
         <module>remote</module>
         <module>web</module>
+        <module>redis</module>
     </modules>
 
 
