--- a/spring/springUtil/pom.xml
+++ b/spring/springUtil/pom.xml
@@ -86,6 +86,27 @@
 
         <!-- Spring aop libs End -->
 
+
+        <dependency>
+            <groupId>org.springframework.data</groupId>
+            <artifactId>spring-data-redis</artifactId>
+            <version>2.1.3.RELEASE</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jcl-over-slf4j</artifactId>
+                    <groupId>org.slf4j</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
+
         <!-- spring包 开始 -->
         <dependency>
             <groupId>org.springframework</groupId>
