--- a/redis/redisLockUtil/pom.xml
+++ b/redis/redisLockUtil/pom.xml
@@ -24,10 +24,35 @@
 
     <dependencies>
 
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.12</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zz.bms.util</groupId>
+            <artifactId>baseUtil</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.zz.bms.util</groupId>
+            <artifactId>springUtil</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
         <dependency>
             <groupId>org.redisson</groupId>
             <artifactId>redisson</artifactId>
             <version>2.8.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.0.23.Final</version>
         </dependency>
 
     </dependencies>
