--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <module>remote</module>
         <module>web</module>
         <module>redis</module>
+        <module>configs</module>
     </modules>
 
 
