--- a/poi/simplePoiUtil/pom.xml
+++ b/poi/simplePoiUtil/pom.xml
@@ -55,6 +55,19 @@
             <version>1.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.zz.bms.util</groupId>
+            <artifactId>baseFileUtils</artifactId>
+            <version>1.0.1</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>net.sourceforge.javacsv</groupId>
+            <artifactId>javacsv</artifactId>
+            <version>2.0</version>
+        </dependency>
+
 
         <!-- poi start -->
         <dependency>
@@ -125,6 +138,21 @@
             <artifactId>servlet-api</artifactId>
             <version>${servlet-api.version}</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.javacsv</groupId>
+            <artifactId>javacsv</artifactId>
+            <version>2.1</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sourceforge.javacsv</groupId>
+            <artifactId>javacsv</artifactId>
+            <version>2.0</version>
+        </dependency>
+        <dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>javax.persistence-api</artifactId>
+            <version>2.2</version>
         </dependency>
 
     </dependencies>
